--- a/paper.bib
+++ b/paper.bib
@@ -3,7 +3,7 @@
   	Journal = {Journal of Applied Crystallography},
   	Title = {{TOPAS and TOPAS-Academic: an optimization program integrating computer algebra and crystallographic objects written in C plus}},
   	Year = 2018
-    volume = 51
+    Volume = 51
     doi = {10.1107/S1600576718000183},
 }
 
@@ -12,6 +12,6 @@
   	Journal = {Physica B},
   	Title = {{Recent Advances in Magnetic-Structure Determination by Neutron Powder Diffraction}},
   	Year = 1993
-    volume = 192
+    Volume = 192
     doi = {10.1016/0921-4526(93)90108-I},
 }
