--- a/paper.bib
+++ b/paper.bib
@@ -2,8 +2,8 @@
   	Author = {{Coelho}, A. A.},
   	Journal = {Journal of Applied Crystallography},
   	Title = {{TOPAS and TOPAS-Academic: an optimization program integrating computer algebra and crystallographic objects written in C plus}},
-  	Year = 2018
-    Volume = 51
+  	Year = 2018,
+    Volume = 51,
     doi = {10.1107/S1600576718000183},
 }
 
@@ -11,7 +11,7 @@
   	Author = {{Rodriguez-carvajal}, J.},
   	Journal = {Physica B},
   	Title = {{Recent Advances in Magnetic-Structure Determination by Neutron Powder Diffraction}},
-  	Year = 1993
-    Volume = 192
+  	Year = 1993,
+    Volume = 192,
     doi = {10.1016/0921-4526(93)90108-I},
 }
