--- a/paper.bib
+++ b/paper.bib
@@ -15,3 +15,12 @@
     Volume = 192,
     doi = {10.1016/0921-4526(93)90108-I},
 }
+
+@misc{pyqtgraph,
+  	Author = {{Campagnola}, L.},
+  	Journal = {Physica B},
+  	Title = {{PyQtGraph-scientific graphics and GUI library for python.}},
+  	Year = 2016,
+    url = {https://www.pyqtgraph.org/},
+}
+
