--- a/paper.bib
+++ b/paper.bib
@@ -8,7 +8,7 @@
 }
 
 @article{fullprof,
-  	Author = {{Rodriguez-carvajal}, J.},
+  	Author = {{Rodriguez-Carvajal}, J.},
   	Journal = {Physica B},
   	Title = {{Recent Advances in Magnetic-Structure Determination by Neutron Powder Diffraction}},
   	Year = 1993,
